2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Reorganize grammar by appendix A.2 of C2X.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Allow C2X attributes on statements.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20181120-1.c:
	  Fix bug #2947.
	* src/SDCC.lex,
	  support/regression/tests/c2xkeywords.c:
	  Support C2X keyword from N2457.
	* support/regression/tests/gcc-torture-execute-pr47148.c,
	  support/regression/tests/gcc-torture-execute-pr63659.c,
	  support/regression/tests/gcc-torture-execute-pr64682.c:
	  Enable some tests that depend on C99 features now supported by SDCC.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/gcc-torture-execute-*:
	  Add more GCC tests, RFE #652.

2019-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-gbz80.def:
	  Improve fix for bug #2914.

2019-11-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCval.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  C2X u8 character constants (N2418).

2019-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  support/regression/tests/bug-2942.c:
	  Fix bug #2942.

2019-11-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/ports/pdk15-stack-auto/spec.mk:
	  Increase timeout for regression testing on ARMv6.

2019-11-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClrange.c:
	  Allow more live-range shortening for stm8, pdk.

2019-11-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve wide & by small constants and register result.
	* src/SDCCsymt.c,
	  src/SDCCerr.h,